Tornando o site mais responsivo

--- a/index.html
+++ b/index.html
@@ -1,21 +1,26 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-  <meta charset="utf-8">
-  <title>Gilson Trajano</title>
-  <link rel="stylesheet" href="css/estilos.css">
-</head>
-<body>
-  <head>
-    <nav class="menu">
-      <ul>
-        <li><a href="#">Sobre</a></li>
-        <li><a href="#">Portfólio</a></li>
-        <li><a href="#">Contato</a></li>
-      </ul>
-    </nav>
-    <h1 class="site-title">Gilson Trajano</h1>
-    <h2 class="site-subtitle">jr. Frontend Developer</h2>
-  </head>
-</body>
+   <head>
+      <meta charset="utf-8">
+      <title>Gilson Trajano</title>
+      <link rel="stylesheet" href="css/estilos.css">
+   </head>
+   <body>
+      <header>
+         <nav class="menu">
+            <ul>
+               <li><a href="#">Sobre</a></li>
+               <li><a href="#">Portfólio</a></li>
+               <li><a href="#">Contato</a></li>
+            </ul>
+         </nav>
+         <div>
+         <h1 class="site-title">Gilson Trajano</h1>
+         <h2 class="site-subtitle">Analista/Desenvolvedor</h2>
+         <div>
+      </header>
+      <section>
+         
+      </section>
+   </body>
 </html>
