Adicionando o portfólio e os contatos

--- a/index.html
+++ b/index.html
@@ -2,25 +2,62 @@
 <html lang="pt-br">
    <head>
       <meta charset="utf-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>Gilson Trajano</title>
+      <script src="https://kit.fontawesome.com/c54e6ff457.js" crossorigin="anonymous"></script>
+      <link href="https://fonts.googleapis.com/css2?family=Carter+One&family=Dancing+Script:wght@700&family=Roboto:wght@700&display=swap" rel="stylesheet">
       <link rel="stylesheet" href="css/estilos.css">
    </head>
    <body>
       <header>
          <nav class="menu">
             <ul>
-               <li><a href="#">Sobre</a></li>
-               <li><a href="#">Portfólio</a></li>
-               <li><a href="#">Contato</a></li>
+               <li><a href="#sobre">Sobre</a></li>
+               <li><a href="#portfolio">Portfólio</a></li>
+               <li><a href="#contato">Contato</a></li>
             </ul>
          </nav>
          <div>
-         <h1 class="site-title">Gilson Trajano</h1>
-         <h2 class="site-subtitle">Analista/Desenvolvedor</h2>
-         <div>
+            <h1 class="site-title">Gilson Trajano</h1>
+            <h2 class="site-subtitle">Analista/Desenvolvedor</h2>
+            <figure>
+               <img class="img-perfil" src="./img/img_perfil.jpg" alt="perfil">
+               <figcaption></figcaption>
+            </figure>
+         </div>
       </header>
-      <section>
-         
+      <section class="portfolio" id="portfolio">
+         <h2>Portfólio</h2>
+         <div class="grid">
+            <figure>
+               <img class="img-portfolio" src="./img/job.jpg" alt="job">
+               <figcaption>job</figcaption>
+            </figure>
+            <figure>
+               <img class="img-portfolio" src="./img/educação.jpg" alt=">educação">
+               <figcaption>Educação</figcaption>
+            </figure>
+            <figure>
+               <img class="img-portfolio" src="./img/projeto_pessoal.png" alt="Projetos pessoais">
+               <figcaption>Projetos pessoais</figcaption>
+            </figure>
+         </div>
       </section>
+      <section class="contato" id="contato">
+      <h2>Contato</h2>
+      <div class="grid icons">
+         <a target="_blank" href="https://github.com/gilsonTSC">
+         <i class="fab fa-github"></i>
+         </a>
+         <a target="_blank" href="https://www.linkedin.com/in/gilson-trajano-b01ab28a/">
+         <i class="fab fa-linkedin"></i>
+         </a>
+         <a target="_blank" href="https://www.instagram.com/gilsontrajano/">
+         <i class="fab fa-instagram"></i>
+         </a>
+         <a target="_blank" href="mailto:gilson.costa@dcx.ufpb.br">
+         <i class="fas fa-envelope"></i>
+         </a>
+      </div>
    </body>
 </html>
