--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
          <nav class="menu">
             <ul>
                <li><a href="#sobre">Sobre</a></li>
-               <li><a href="#portfolio">Portfólio</a></li>
+               <li><a href="#projeto">Projeto</a></li>
                <li><a href="#contato">Contato</a></li>
             </ul>
          </nav>
@@ -26,24 +26,68 @@
             </figure>
          </div>
       </header>
-      <section class="portfolio" id="portfolio">
-         <h2>Portfólio</h2>
+      <section class="sobre container" id="sobre">
+         <h2>Sobre</h2>
+         <p>
+            Sou formando em Ciências da Computação pela Universidade Federal da Paraíba - UFPB
+            pós-graduado em Big Data(Ciências dos dados) e atualemente estou cursando a segunda 
+            pós em Desenvovimento de Sistemas com Java ambas pela Faculdade Unyleya.
+         </p>
+         <p>
+            Atuando no mercado de tecnologia à quase 3 anos como um analista/desenvolvedor.
+            Responsável pelo levantamento de requisitos junto ao cliente, desenvolvimento 
+            e manutenção no sistema e banco de dados.
+         </p>
+         <p>
+            Utilizando as tecnologias PL/SQL Developer, Oracle Forms e Oracle Reports na criação
+            e manutenção das telas e relatórios. Além da utilização de javaScript e HTML para o 
+            desenvolvimento no portal. Sendo responsavel pelo atendimento dos ticket's que ocorrem
+            em produção, atuando na analise e apresentação da solução para os problemas relatados.
+         </p>
+         <p>
+            Para mais informações segue meu <a target="_blank" href="https://www.dropbox.com/s/pdyjvxknbzr7e37/CV%20-%20Gilson%20Trajano%20-%20Analista%20-%20Desenvolvedor.pdf?dl=0">currículo.</a>
+         </p>
+         <p>
+            Este site foi construído durante a
+            <a target="_blank" href="https://www.alura.com.br/imersao-css">Imersão CSS da Alura</a>
+         </p>
+      </section>
+      <section class="portfolio container" id="projeto">
+         <h2>Projeto</h2>
          <div class="grid">
-            <figure>
-               <img class="img-portfolio" src="./img/job.jpg" alt="job">
-               <figcaption>job</figcaption>
-            </figure>
-            <figure>
-               <img class="img-portfolio" src="./img/educação.jpg" alt=">educação">
-               <figcaption>Educação</figcaption>
-            </figure>
-            <figure>
-               <img class="img-portfolio" src="./img/projeto_pessoal.png" alt="Projetos pessoais">
-               <figcaption>Projetos pessoais</figcaption>
-            </figure>
+            <div class="flip-card">
+               <div class="card">
+                  <figure>
+                     <img class="img-portfolio" src="./img/job.jpg" alt="job">
+                  </figure>
+                  <div class="card-back">
+                     <h3>Job: Levantamento de requisitos, analise e desenvolvimento com PL/SQL, Forms, Reports, javaScript e HTML.</h3>
+                  </div>
+               </div>
+            </div>
+            <div class="flip-card">
+               <div class="card">
+                  <figure class="card-front">
+                     <img class="img-portfolio" src="./img/educação.jpg" alt=">educação">
+                  </figure>
+                  <div class="card-back">
+                     <h3>Graduação em Ciências da Computação, pós em Desenvolvimento de Sistema com Java e Big Data.</h3>
+                  </div>
+               </div>
+            </div>
+            <div class="flip-card">
+               <div class="card">
+                  <figure class="card-front">
+                     <img class="img-portfolio" src="./img/projeto_pessoal.png" alt="Projetos pessoais">
+                  </figure>
+                  <div class="card-back">
+                     <h3>API REST Spring Boot, Spring MVC e Spring webflux.</h3>
+                  </div>
+               </div>
+            </div>
          </div>
       </section>
-      <section class="contato" id="contato">
+      <section class="contato container" id="contato">
       <h2>Contato</h2>
       <div class="grid icons">
          <a target="_blank" href="https://github.com/gilsonTSC">
